# metrix

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.rocket  Makefile  README.md  docker-compose.yml  rocket.toml  run.sh  test.sh
.circleci/: config.yml
metrix/: Cargo.toml  rocket.toml
metrix/migrations/2019-11-05-003436_create_metrics_table/: down.sql  up.sql
metrix/src/: app.rs  db.rs  lib.rs  main.rs  models.rs  parser.rs  schema.rs  tests.rs
metrix/src/routes/: mod.rs
metrix/tests/: common.rs  parser.rs
migrations/2020-04-13-011114_alter_json_metrics_to_jsonb/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  parser.rs  schema.rs
src/routes/: metrics.rs  ping.rs
tests/: ping.rs
