[package]
name = "metrix"
version = "0.1.0"
authors = ["njwoodge <woodgern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_cli = { version = "1.4.0", features = ["postgres"] }
