[package]
name = "metrix"
version = "0.1.0"
authors = ["njwoodge <woodgern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.0.0", features = ["postgres", "serde_json", "chrono"] }
diesel_migrations = "1.4.0"
diesel_cli = { version = "1.4.0", features = ["postgres"] }
